TODO: Create class diagram...

@startuml

class Observable {
    -std::set<Observer*> observers
    +void registerObserver(Observer*)
    +void unregisterObserver(Observer*)
    #void notifyObserver(float)
}

interface Observer {
    +{abstract}void notify(float)
}

class Displacement {
    -float value
    +void set(float)
}

class Acceleration {
    -bool hasFirstValue
    -bool hasSecondValue
    -bool hasThirdValue
    -float firstValue
    -float secondValue
    -float thirdValue
    +float get()
}

class Speed {
    -bool hasFirstValue
    -bool hasSecondValue
    -float firstValue
    -float secondValue
    +float get()
}

note right of Observable: for(Observer* observer : observers)\n\tobserver->notify(value);

Observable "1" o-- "*" Observer
Observable <|-- Displacement
Observer <|-- Acceleration
Displacement <.. Speed : observes
Observer <|-- Speed
Displacement <.. Acceleration : observes

@enduml
